objects/ssot__Presentation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CanSendByEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeactivationDate__c</fullName>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Presentation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDoubleTapZoomEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Tap Zoom Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPinchZoomEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinch Zoom Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPresentationLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presentation Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsTargeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__PlayerGestureSectionSideType__c</fullName>
        <label>Player Gesture Section Side Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationStatus__c</fullName>
        <label>Presentaion Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicDisclaimerContentName__c</fullName>
        <label>Public Disclaimer Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicDisclaimerContentUrl__c</fullName>
        <label>Public Disclaimer Content URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReactionSectionSideType__c</fullName>
        <label>Reaction Section Side Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>